--- a/Frontend/src/assets/style.css
+++ b/Frontend/src/assets/style.css
@@ -1,46 +1,30 @@
-a,i{
-    color: rgb(98, 104, 189);
-    text-decoration: none;
-    user-select: none;
+a{
+  text-decoration: none;
+  user-select: none;
 }
-body{
-    background-color: black;
-    color: azure;
-    text-align: center;
+body {
+  background-color: black;
+  color: rgb(255, 255, 255);
+  text-align: center;
 }
-.card-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-  }
-  
-  .card {
-    /* Estilos para las cards */
-    width: 300px;
-    height: 400px;
-    margin: 10px;
-  }
-  
+
+.container {
+}
 
 
-
-
-
-
-
-
-
-
-
-
-
+.card {
+  width: 100%;
+}
 
 @keyframes fade-in {
-    from { opacity: 0; }
-    to { opacity: 1; }
+  from {
+    opacity: 0;
   }
-  
-  .fade-in {
-    animation: fade-in 0.8s ease-out;
+  to {
+    opacity: 1;
   }
-  
+}
+
+.fade-in {
+  animation: fade-in 0.8s ease-out;
+}
