update frontend y backend
se agregaron los endpoint para post notas y autenticacion de usuarios.

se mejoro el front en la vista NotasView

--- a/Frontend/src/assets/style.css
+++ b/Frontend/src/assets/style.css
@@ -4,8 +4,17 @@ a {
   color: #000;
 
 }
+.bg{
+  width: 100%;
+  height: 100%;
+  background-color: #694effd0;;
+
+}
+
+
+
 /*css nav*/
-.btn-transparent:hover{
+.btn-nav:hover{
 background-color: rgb(82, 100, 255);
 }
 .nav-logo{
@@ -41,7 +50,7 @@ background-color: rgb(82, 100, 255);
 .cont-login {
   max-width: 700px;
   border-radius: 5px;
-  background-color: #b688ff57;
+  background-color: #995aff;
 }
 
 .btn-effect {
@@ -113,6 +122,14 @@ background-color: rgb(82, 100, 255);
 
 .card-footer small {
   color: #999;
+}
+
+.btn-like{
+  box-shadow: none;
+}
+.btn-like:active{
+  background-color: red;
+
 }
 
 
