--- a/Frontend/src/assets/style.css
+++ b/Frontend/src/assets/style.css
@@ -4,11 +4,21 @@ a {
   color: #000;
 
 }
-.bg{
+.bg {
   width: 100%;
-  height: 100%;
-  background-color: #694effd0;;
+  height: 100vh;
+  background-image: url(/src/assets/28064-violeta.jpg);
+  background-repeat: repeat;
+  background-size: auto;
+  background-color: #995aff;
+}
 
+@media (max-width: 768px) {
+  .bg {
+    height: 100vh;
+    background-size: cover; 
+    background-position: center center; 
+  }
 }
 
 
